<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_legalnotices"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_legalnotices"/>
    
    <item android:id="@+id/menu_vista"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_vista"/>
    
    <item android:id="@+id/menu_mover"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_mover"/>
    
    <item android:id="@+id/menu_animar"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_animar"/>
    
    <item android:id="@+id/menu_3d"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_mover3D"/>
    
    <item android:id="@+id/menu_posicion"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/menu_posicion"/>
    
    <item android:id="@+id/menu_posicionActual"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_compass"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_posicion_actual"/>
    
    <item android:id="@+id/menu_MadridABarcelona"
        android:orderInCategory="100"
        android:showAsAction="ifRoom|withText"
        android:icon="@android:drawable/ic_dialog_map"
        android:title="@string/menu_calcular_MadridABarcelona"/>

</menu>